--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -11,7 +11,7 @@ a {
 button {
   cursor: pointer;
 }
-p {
+h1, h2, h3, p {
   margin: 0;
 }
 /* 共通で使う要素 */
@@ -405,7 +405,7 @@ p {
   max-width: 900px;
   width: 90%;
   margin: 0 auto;
-  padding: 52px 0 0;
+  padding: 52px 0 93px;
 }
 .bl_strengths_ttl {
   padding-bottom: 59px;
@@ -465,5 +465,40 @@ p {
   font-weight: 500;
   font-size: 16px;
   line-height: 27px;
+}
+/* 料金プラン */
+.ly_price {
+  padding: 0 0 39px;
+}
+.ly_price_inner {
+  max-width: 906px;
+  width: 90%;
+  height: 156px;
+  margin: 0 auto;
+  padding: 61px 0 0;
+  background-image: url('../img/price.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.bl_price_ttl {
+  font-size: 26px;
+  line-height: 26px;
+  color: #FFFFFF;
+  text-align: center;
+  margin-bottom: 27px;
+}
+.bl_price_btn {
+  display: flex;
+  width: 200px;
+  height: 50px;
+  box-sizing: border-box;
+  background: transparent;
+  border: 1px solid #FFFFFF;
+  border-radius: 30px;
+  color: #FFFFFF;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=style.css.map */
