--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -576,11 +576,20 @@ h1, h2, h3, p {
 
 .bl_success_examples {
   display: flex;
-  gap: 0 3.33%;
+  flex-direction: column;
+  gap: 50px 0;
+  @media screen and (min-width: 1025px) {
+    flex-direction: row;
+    gap: 0 3.33%;
+  }
 }
 
 .bl_success_example {
-  width: calc((100% - 6.66%) / 3);
+  max-width: 300px;
+  margin: 0 auto;
+  @media screen and (min-width: 1025px) {
+    width: calc((100% - 6.66%) / 3);
+  }
 }
 
 .bl_success_summary {
