--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -589,4 +589,66 @@ h1, h2, h3, p {
   font-size: 16px;
   line-height: 32px;
 }
+.ly_flow {
+  padding: 50px 0 30px;
+}
+.ly_flow_inner {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+.bl_flow_title {
+  padding-bottom: 45px;
+}
+.bl_flow_parts {
+  display: flex;
+  flex-direction: column;
+  gap: 8px 0;
+}
+.bl_flow_part {
+  display: flex;
+  width: 100%;
+  height: 64px;
+  background-color: #F8F8F8;
+}
+.bl_flow_number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64px;
+  height: 64px;
+  background-color: #F5A623;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 16px;
+}
+.bl_flow_summary {
+  position: relative;
+  width: 193.5px;
+  padding: 25px 0 21px 21px;
+}
+.bl_flow_summary h3 {
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+}
+.bl_flow_summary::before {
+  position: absolute;
+  top: 17.5px;
+  right: 0px;
+  width: 1px;
+  height: 29px;
+  background-color: #C3C3C3;
+  content: '';
+}
+.bl_flow_content {
+  display: flex;
+  align-items: center;
+  padding-left: 53.5px;
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 27px;
+}
 /*# sourceMappingURL=style.css.map */
