--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -608,24 +608,36 @@ h1, h2, h3, p {
 .bl_flow_part {
   display: flex;
   width: 100%;
-  height: 64px;
+  min-height: 64px;
   background-color: #F8F8F8;
 }
 .bl_flow_number {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 64px;
-  height: 64px;
+  min-width: 64px;
+  min-height: 64px;
   background-color: #F5A623;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 16px;
 }
+.bl_flow_summary_content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px 0;
+  padding: 10px 21px;
+}
+@media screen and (min-width: 1025px) {
+  .bl_flow_summary_content {
+    flex-direction: row;
+  }
+}
 .bl_flow_summary {
+  display: flex;
+  align-items: center;
   position: relative;
   width: 193.5px;
-  padding: 25px 0 21px 21px;
 }
 .bl_flow_summary h3 {
   color: #1B224C;
@@ -635,20 +647,29 @@ h1, h2, h3, p {
 }
 .bl_flow_summary::before {
   position: absolute;
-  top: 17.5px;
+  top: 7.5px;
   right: 0px;
   width: 1px;
   height: 29px;
   background-color: #C3C3C3;
   content: '';
 }
+@media screen and (max-width: 1024px) {
+  .bl_flow_summary::before {
+    display: none;
+  }
+}
 .bl_flow_content {
   display: flex;
   align-items: center;
-  padding-left: 53.5px;
   color: #1B224C;
   font-weight: 500;
   font-size: 16px;
   line-height: 27px;
+}
+@media screen and (min-width: 1025px) {
+  .bl_flow_content {
+    padding-left: 53.5px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
