--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -589,6 +589,7 @@ h1, h2, h3, p {
   font-size: 16px;
   line-height: 32px;
 }
+/* ご利用の流れ */
 .ly_flow {
   padding: 50px 0 30px;
 }
@@ -671,5 +672,58 @@ h1, h2, h3, p {
   .bl_flow_content {
     padding-left: 53.5px;
   }
+}
+.bl_document {
+  height: 186.4px;
+  padding: 70px 0 0;
+  background-image: url('../img/cta.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+.bl_document_title {
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 1em;
+}
+@media screen and (max-width: 1024px) {
+  .bl_document_title {
+    font-size: 24px;
+  }
+}
+.bl_document_ctaButton_wrapper {
+  margin: 25px 0 22px;
+}
+.bl_document_ctaButton {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 50px;
+  border: transparent 1px solid;
+  border-radius: 25px;
+  box-sizing: border-box;
+  /* TODO: 必要に応じて共通化 */
+  background-color: #F5A623;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 16px;
+}
+.bl_document_ctaButton:focus, .bl_document_ctaButton:hover {
+  border: currentColor 1px solid;
+  background-color: #FFFFFF;
+  color: #F5A623;
+}
+.bl_document_contactLink {
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  text-decoration: underline;
+}
+.bl_document_contactLink:hover {
+  opacity: 0.7;
 }
 /*# sourceMappingURL=style.css.map */
