--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -726,4 +726,50 @@ h1, h2, h3, p {
 .bl_document_contactLink:hover {
   opacity: 0.7;
 }
+.bl_telItem {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 0;
+  min-height: 36px;
+  padding: 20px 0 24px;
+  text-align: center;
+}
+@media screen and (min-width: 1025px) {
+  .bl_telItem {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 0 20px;
+  }
+  .bl_telItem .bl_telItem_title {
+    margin-bottom: 2px;
+  }
+  .bl_telItem .bl_telItem_time {
+    margin-bottom: 2px;
+    padding-right: 108px;
+  }
+}
+.bl_telItem_title {
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1em;
+}
+.bl_telItem_number {
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 1em;
+}
+@media screen and (min-width: 1025px) {
+  .bl_telItem_number {
+    font-size: 36px;
+  }
+}
+.bl_telItem_time {
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1em;
+}
 /*# sourceMappingURL=style.css.map */
