--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -42,7 +42,7 @@ h1, h2, h3, p {
   width: 136px;
   height: 27px;
   &:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 }
 
@@ -91,7 +91,7 @@ h1, h2, h3, p {
   line-height: 16px;
   text-decoration: underline;
   &:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 }
 
@@ -167,7 +167,7 @@ h1, h2, h3, p {
   font-weight: bold;
   font-size: 16px;
   &:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 }
 
@@ -198,7 +198,7 @@ h1, h2, h3, p {
   font-size: 16px;
   line-height: 16px;
   &:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 }
 
@@ -296,7 +296,7 @@ h1, h2, h3, p {
   line-height: 30px;
   color: #FFFFFF;
   &:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 }
 
@@ -783,7 +783,7 @@ h1, h2, h3, p {
   line-height: 16px;
   text-decoration: underline;
   &:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 }
 
@@ -835,8 +835,72 @@ h1, h2, h3, p {
 }
 
 .bl_footerMenu {
-  height: 230px;
+  min-height: 230px;
   background-color: #1B224C;
+}
+
+.bl_footerMenu_inner {
+  display: flex;
+  justify-content: space-between;
+  max-width: 950px;
+  margin: 0 auto;
+  padding: 35px 20px;
+}
+
+.bl_footerNav_item {
+  list-style-type: none;
+}
+
+.bl_footerNav_link {
+  color: #FFFFFF;
+  &:hover {
+    opacity: .7;
+  }
+}
+
+.bl_footerMenu_info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: #FFFFFF;
+
+  > *:nth-child(1) {
+    margin-bottom: 40px;
+  }
+
+  > *:nth-child(2) {
+    margin-bottom: 13px;
+  }
+}
+
+.bl_footerMenu_logo {
+  display: inline-block;
+  width: 159px;
+  height: 31px;
+  padding: 14px 19px 13px;
+  background-color: #FFFFFF;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.bl_footer_tel {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1em;
+  > *:first-child {
+    margin-right: 3px;
+  }
+  &:hover {
+    opacity: .7;
+  }
+}
+
+.bl_footer_time {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1em;
 }
 
 .ly_copyright {
