--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -783,11 +783,36 @@ h1, h2, h3, p {
   margin: 0 auto;
   padding: 35px 20px;
 }
+.bl_footerNav {
+  display: flex;
+  flex-direction: column;
+  height: 21px;
+}
+@media screen and (max-width: 1024px) {
+  .bl_footerNav {
+    gap: 15px 0;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .bl_footerNav {
+    flex-direction: row;
+  }
+  .bl_footerNav > *:not(:first-child) {
+    padding-left: 21px;
+  }
+  .bl_footerNav > *:not(:last-child) {
+    padding-right: 21px;
+    border-right: 1px solid #FFFFFF;
+  }
+}
 .bl_footerNav_item {
   list-style-type: none;
 }
 .bl_footerNav_link {
+  display: inline-block;
   color: #FFFFFF;
+  font-size: 16px;
+  line-height: 21px;
 }
 .bl_footerNav_link:hover {
   opacity: 0.7;
@@ -811,14 +836,28 @@ h1, h2, h3, p {
   padding: 14px 19px 13px;
   background-color: #FFFFFF;
 }
+@media screen and (max-width: 1024px) {
+  .bl_footerMenu_logo {
+    width: 80px;
+    height: 16px;
+  }
+}
 .bl_footerMenu_logo img {
   width: 100%;
   height: 100%;
+}
+.bl_footerMenu_logo:hover {
+  opacity: 0.7;
 }
 .bl_footer_tel {
   font-weight: bold;
   font-size: 16px;
   line-height: 1em;
+}
+@media screen and (max-width: 1024px) {
+  .bl_footer_tel {
+    font-size: 14px;
+  }
 }
 .bl_footer_tel > *:first-child {
   margin-right: 3px;
