--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -847,12 +847,36 @@ h1, h2, h3, p {
   padding: 35px 20px;
 }
 
+.bl_footerNav {
+  display: flex;
+  flex-direction: column;
+  height: 21px;
+  @media screen and (max-width: 1024px) {
+    gap: 15px 0;
+  }
+  @media screen and (min-width: 1025px) {
+    flex-direction: row;
+    > * {
+      &:not(:first-child) {
+        padding-left: 21px;
+      }
+      &:not(:last-child) {
+        padding-right: 21px;
+        border-right: 1px solid #FFFFFF;
+      }
+    }
+  }
+}
+
 .bl_footerNav_item {
   list-style-type: none;
 }
 
 .bl_footerNav_link {
+  display: inline-block;
   color: #FFFFFF;
+  font-size: 16px;
+  line-height: 21px;
   &:hover {
     opacity: .7;
   }
@@ -879,9 +903,16 @@ h1, h2, h3, p {
   height: 31px;
   padding: 14px 19px 13px;
   background-color: #FFFFFF;
+  @media screen and (max-width: 1024px) {
+    width: 80px;
+    height: 16px;
+  }
   img {
     width: 100%;
     height: 100%;
+  }
+  &:hover {
+    opacity: .7;
   }
 }
 
@@ -889,6 +920,9 @@ h1, h2, h3, p {
   font-weight: bold;
   font-size: 16px;
   line-height: 1em;
+  @media screen and (max-width: 1024px) {
+    font-size: 14px;
+  }
   > *:first-child {
     margin-right: 3px;
   }
