feat: トップページのブログ (最新3件)

--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -727,6 +727,58 @@ h1, h2, h3, p {
   }
 }
 
+.ly_blog_news_container {
+  padding: 0 20px 119px;
+}
+
+.ly_blog_news_container_inner {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+// TODO: 共通化
+.bl_blog_title {
+  margin-bottom: 36px;
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 1em;
+}
+
+.bl_blog_items {
+  display: flex;
+  flex-direction: column;
+  gap: 31px 0;
+}
+
+.bl_blog_item {
+  display: flex;
+  gap: 0 20px;
+  width: 430px;
+  height: 110px;
+}
+
+.bl_blog_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.bl_blog_info_title {
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 27px;
+  text-decoration: underline;  
+}
+
+.bl_blog_info_time {
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+}
+
 // 資料請求 
 .bl_document {
   height: 186.4px;
