--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -756,6 +756,19 @@ h1, h2, h3, p {
   gap: 0 20px;
   width: 430px;
   height: 110px;
+  &:hover {
+    opacity: .7;
+  }
+}
+
+.bl_blog_img {
+  width: 150px;
+  height: 110px;
+  margin: 0; // figureタグのmarginを打ち消す
+  img {
+    width: auto;
+    height: 100%;
+  }
 }
 
 .bl_blog_info {
