--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -743,9 +743,14 @@ h1, h2, h3, p {
   font-size: 32px;
   line-height: 1em;
 }
+.bl_news_items {
+  display: flex;
+  flex-direction: column;
+  gap: 17px 0;
+}
 .bl_news_item {
   display: block;
-  height: 78px;
+  height: 87px;
 }
 .bl_news_item:hover {
   opacity: 0.7;
