--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -810,9 +810,15 @@ h1, h2, h3, p {
   line-height: 1em;
 }
 
+.bl_news_items {
+  display: flex;
+  flex-direction: column;
+  gap: 17px 0;
+}
+
 .bl_news_item {
   display: block;
-  height: 78px;
+  height: 87px;
   &:hover {
     opacity: .7;
   }
