docs: CSSのリファクタポイントをコメントで記載

--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -1,3 +1,17 @@
+// <CSSのリファクタポイント>
+
+// 全要素に共通するCSSを指定 (ベースグループ)
+// ブラウザ間の差分を無くすCSSを指定
+// ファーストビューなどの背景画像がある場合ly_ではなくbl_にすべきか？
+// ファーストビューなどの背景画像はCSSファイルではなくstyleタグで指定？
+// クラス名はbl_(featureやpriceなどブロック名)_(titleやimgなどブロック内のパーツ名)という名前をつける
+
+// bl_要素やel_要素にレイアウトに関するスタイリングはしない (floatやwidthなど)
+// line-heightなどを共通で指定したい
+// Sassのmixinを活用
+// できるだけPC表示をベースにする (SP/iPad表示をmax-widthで対応)
+// できるだけmargin-right / margin-bottomをベースにする
+
 /* 共通化 */
 body {
   margin: 0;
