--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -345,12 +345,12 @@ h1, h2, h3, p {
   padding: 116px 20px 0;
 }
 
-.bl_fvTitle {
+.bl_fv_title {
   margin-bottom: 21.5px;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 40px;
-  line-height: 40px;
+  line-height: 1;
   text-align: center;
   text-shadow: 0px 3px 6px #00000029;
   @media (min-width: 600px) {
@@ -359,7 +359,8 @@ h1, h2, h3, p {
   }
 }
 
-.bl_fvSubTitle {
+.bl_fv_subTitle {
+  margin-bottom: 44.5px;
   color: #FFFFFF;
   font-size: 12px;
   line-height: 21px;
@@ -370,14 +371,14 @@ h1, h2, h3, p {
   }
 }
 
-.bl_fvCtaBtn_wrapper {
+.bl_fv_documentRequest {
+  margin-bottom: 22px;
   width: 260px;
   height: 60px;
-  margin: 44.5px auto 0;
+  margin: 0 auto;
 }
 
-.bl_fvContactLink {
-  margin-top: 22px;
+.bl_fv_contact {
   text-align: center;
 }
 
