--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -294,6 +294,7 @@ h1, h2, h3, p {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  text-align: center;
 }
 .ly_fv_inner {
   padding: 116px 20px 0;
@@ -304,7 +305,6 @@ h1, h2, h3, p {
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
-  text-align: center;
   text-shadow: 0px 3px 6px #00000029;
 }
 @media (min-width: 600px) {
@@ -318,7 +318,6 @@ h1, h2, h3, p {
   color: #FFFFFF;
   font-size: 12px;
   line-height: 21px;
-  text-align: center;
 }
 @media (min-width: 600px) {
   .bl_fv_subTitle {
@@ -329,11 +328,7 @@ h1, h2, h3, p {
 .bl_fv_documentRequest {
   width: 260px;
   height: 60px;
-  margin: 0 auto;
-}
-.bl_fv_contact {
-  margin-top: 22px;
-  text-align: center;
+  margin: 0 auto 22px;
 }
 /* こんなお悩みありませんか？ */
 .hp_problem {
