--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -339,6 +339,7 @@ h1, h2, h3, p {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  text-align: center;
 }
 
 .ly_fv_inner {
@@ -351,7 +352,6 @@ h1, h2, h3, p {
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
-  text-align: center;
   text-shadow: 0px 3px 6px #00000029;
   @media (min-width: 600px) {
     font-size: 48px;
@@ -364,7 +364,6 @@ h1, h2, h3, p {
   color: #FFFFFF;
   font-size: 12px;
   line-height: 21px;
-  text-align: center;
   @media (min-width: 600px) {
     font-size: 18px;
     line-height: 31px;
@@ -372,14 +371,12 @@ h1, h2, h3, p {
 }
 
 .bl_fv_documentRequest {
-  margin-bottom: 22px;
   width: 260px;
   height: 60px;
-  margin: 0 auto;
+  margin: 0 auto 22px;
 }
 
 .bl_fv_contact {
-  text-align: center;
 }
 
 /* こんなお悩みありませんか？ */
