--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -31,8 +31,10 @@ h1, h2, h3, p {
     display: none !important;
   }
 }
-.hp_ft16 {
-  font-size: 16px !important;
+.ly_inner {
+  max-width: 950px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 .el_companyLogo {
   display: inline-block;
@@ -41,6 +43,34 @@ h1, h2, h3, p {
 }
 .el_companyLogo:hover {
   opacity: 0.7;
+}
+.el_button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: transparent 1px solid;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-weight: bold;
+  font-size: 14px;
+}
+.el_button.el_button__orange {
+  background-color: #F5A623;
+  color: #FFFFFF;
+}
+.el_button.el_button__orange:focus, .el_button.el_button__orange:hover {
+  border: currentColor 1px solid;
+  background-color: #FFFFFF;
+  color: #F5A623;
+}
+.el_button.el_button__navy {
+  background-color: #1B224C;
+  color: #FFFFFF;
+}
+.el_button.el_button__navy:focus, .el_button.el_button__navy:hover {
+  border: currentColor 1px solid;
+  background-color: #FFFFFF;
+  color: #1B224C;
 }
 .el_ctaBtn {
   display: inline-flex;
