--- a/app/public/wp-content/themes/engress/css/index.css
+++ b/app/public/wp-content/themes/engress/css/index.css
@@ -1,36 +1,38 @@
 @charset "UTF-8";
+/* 共通化 */
 /* ファーストビュー */
 .ly_fv {
-  padding: 116px 0 86px;
   background-image: url('../img/first-view.png');
   background-position: center;
   background-size: cover;
   text-align: center;
 }
+.ly_fv_inner {
+  padding: 116px 0 86px;
+}
 .bl_fv_title {
   margin-bottom: 21.5px;
   color: #FFFFFF;
   font-weight: bold;
-  font-size: 48px;
-  line-height: 48px;
-  line-height: 1;
+  font-size: 3rem;
+  line-height: 1.4;
   text-shadow: 0px 3px 6px #00000029;
 }
 @media (max-width: 599px) {
   .bl_fv_title {
-    font-size: 40px;
+    font-size: 0.15625rem;
   }
 }
 .bl_fv_subTitle {
   margin-bottom: 44.5px;
   color: #FFFFFF;
-  font-size: 12px;
+  font-size: 1.125rem;
   font-size: 18px;
   line-height: 1.7;
 }
 @media (max-width: 599px) {
   .bl_fv_subTitle {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
 .bl_fv_document {
@@ -40,7 +42,7 @@
   width: 260px;
   height: 60px;
   border-radius: 31px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 /* こんなお悩みありませんか？ */
 .ly_problem {
