--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -1,3 +1,8 @@
+/* 共通化 */
+@mixin font-size($size) {
+  font-size: ($size / 16) + rem;
+}
+
 /* ファーストビュー */
 .ly_fv {
   background-image: url('../img/first-view.png');
@@ -14,23 +19,22 @@
   margin-bottom: 21.5px;
   color: #FFFFFF;
   font-weight: bold;
-  font-size: 48px;
-  line-height: 48px;
-  line-height: 1;
+  @include font-size(48);
+  line-height: 1.4;
   text-shadow: 0px 3px 6px #00000029;
   @media (max-width: 599px) {
-    font-size: 40px;
+    @include font-size(2.5);
   }
 }
 
 .bl_fv_subTitle {
   margin-bottom: 44.5px;
   color: #FFFFFF;
-  font-size: 12px;
+  @include font-size(18);
   font-size: 18px;
   line-height: 1.7;
   @media (max-width: 599px) {
-    font-size: 12px;
+    @include font-size(12);
   }
 }
 
@@ -40,7 +44,7 @@
     width: 260px;
     height: 60px;
     border-radius: 31px;
-    font-size: 16px;
+    @include font-size(16);
   }
 }
 
