--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -14,6 +14,10 @@
 // できるだけmargin-right / margin-bottomをベースにする
 
 /* 共通化 */
+@mixin font-size($size) {
+  font-size: ($size / 16) + rem;
+}
+
 body {
   margin: 0;
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
@@ -71,7 +75,7 @@ h1, h2, h3, p {
   border-radius: 5px;
   box-sizing: border-box;
   font-weight: bold;
-  font-size: 14px;
+  @include font-size(14);
 
   &.el_button__orange {
     background-color: #F5A623;
@@ -135,7 +139,7 @@ h1, h2, h3, p {
 .el_contactLink {
   color: #FFFFFF;
   font-weight: 500;
-  font-size: 16px;
+  @include font-size(16);
   line-height: 1;
   text-decoration: underline;
   &:hover {
