--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -1,8 +1,3 @@
-/* 共通化 */
-@mixin font-size($size) {
-  font-size: ($size / 16) + rem;
-}
-
 /* ファーストビュー */
 .ly_fv {
   background-image: url('../img/first-view.png');
@@ -11,40 +6,39 @@
   text-align: center;
 }
 
-.ly_fv_inner {
-  padding: 116px 0 86px;
+.ly_fv_inner {  
+  padding: 7.25rem 0 5.375rem; // 116px 0 86px
 }
 
 .bl_fv_title {
-  margin-bottom: 21.5px;
+  margin-bottom: 1.34375rem; // 21.5px;
   color: #FFFFFF;
   font-weight: bold;
-  @include font-size(48);
+  font-size: 3rem; // 48px
   line-height: 1.4;
   text-shadow: 0px 3px 6px #00000029;
   @media (max-width: 599px) {
-    @include font-size(2.5);
+    font-size: 2.5rem; // 40px
   }
 }
 
 .bl_fv_subTitle {
-  margin-bottom: 44.5px;
+  margin-bottom: 2.78125rem; // 44.5px
   color: #FFFFFF;
-  @include font-size(18);
-  font-size: 18px;
+  font-size: 1.125rem; // 18px
   line-height: 1.7;
   @media (max-width: 599px) {
-    @include font-size(12);
+    font-size: 0.75rem; // 12px
   }
 }
 
 .bl_fv_document {
-  margin-bottom: 22px;
+  margin-bottom: 1.375rem; // 22px
   .el_button {
     width: 260px;
     height: 60px;
     border-radius: 31px;
-    @include font-size(16);
+    font-size: 1rem; // 16px
   }
 }
 
