--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -14,6 +14,9 @@ button {
 h1, h2, h3, p {
   margin: 0;
 }
+.ly_fv *, .ly_about * {
+  box-sizing: border-box;
+}
 /* 共通で使う要素 */
 .lg_only {
   display: none !important;
@@ -34,7 +37,7 @@ h1, h2, h3, p {
 .ly_inner {
   max-width: 950px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 25px;
 }
 .el_companyLogo {
   display: inline-block;
