--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -12,6 +12,7 @@
 // Sassのmixinを活用
 // できるだけPC表示をベースにする (SP/iPad表示をmax-widthで対応)
 // できるだけmargin-right / margin-bottomをベースにする
+// できるだけborder-boxをデフォルトにする
 
 /* 共通化 */
 @mixin font-size($size) {
@@ -37,6 +38,13 @@ h1, h2, h3, p {
   margin: 0;
 }
 
+// TODO: 全要素で対応後に削除予定
+.ly_fv, .ly_about {
+  * {
+    box-sizing: border-box;
+  }
+}
+
 /* 共通で使う要素 */
 .lg_only {
   display: none !important;
@@ -55,7 +63,7 @@ h1, h2, h3, p {
 .ly_inner {
   max-width: 950px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 25px;
 }
 
 .el_companyLogo {
@@ -152,7 +160,7 @@ h1, h2, h3, p {
   font-weight: bold;
   font-size: 24px;
   line-height: 36px;
-  text-align: center;
+  text-align: center; // TODO: 削除
   @media screen and (min-width: 1025px) {
     display: flex;
     justify-content: center;
