--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -121,6 +121,7 @@
 }
 
 .bl_strengths_ttl {
+  text-align: center;
   padding-bottom: 59px;
 }
 
@@ -332,6 +333,7 @@
 
 .bl_flow_title {
   padding-bottom: 45px;
+  text-align: center;
 }
 
 .bl_flow_parts {
