--- a/app/public/wp-content/themes/engress/css/header.css
+++ b/app/public/wp-content/themes/engress/css/header.css
@@ -75,6 +75,10 @@
   width: 137px;
   padding-left: 10px;
 }
+.bl_headerCtaBtn_wrapper .el_button {
+  width: 100%;
+  height: 100%;
+}
 .bl_drawerBtn {
   z-index: 101;
   width: 50px;
@@ -172,41 +176,11 @@
   width: 115px;
   height: 50px;
 }
-.ly_paddingTop {
-  height: 80px;
-}
-.el_ctaBtn {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+.bl_drawerCtaBtn_wrapper .el_button {
   width: 100%;
   height: 100%;
-  border: transparent 1px solid;
-  border-radius: 5px;
-  box-sizing: border-box;
-  /* TODO: 必要に応じて共通化 */
-  font-weight: bold;
-  font-size: 14px;
 }
-.el_ctaBtn.el_ctaBtn__rounded {
-  border-radius: 31px;
-}
-.el_ctaBtn.el_ctaBtn__orange {
-  background-color: #F5A623;
-  color: #FFFFFF;
-}
-.el_ctaBtn.el_ctaBtn__orange:focus, .el_ctaBtn.el_ctaBtn__orange:hover {
-  border: currentColor 1px solid;
-  background-color: #FFFFFF;
-  color: #F5A623;
-}
-.el_ctaBtn.el_ctaBtn__navy {
-  background-color: #1B224C;
-  color: #FFFFFF;
-}
-.el_ctaBtn.el_ctaBtn__navy:focus, .el_ctaBtn.el_ctaBtn__navy:hover {
-  border: currentColor 1px solid;
-  background-color: #FFFFFF;
-  color: #1B224C;
+.ly_paddingTop {
+  height: 80px;
 }
 /*# sourceMappingURL=header.css.map */
