--- a/app/public/wp-content/themes/engress/css/header.scss
+++ b/app/public/wp-content/themes/engress/css/header.scss
@@ -82,6 +82,10 @@
 .bl_headerCtaBtn_wrapper {
   width: 137px;
   padding-left: 10px;
+  .el_button {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .bl_drawerBtn {
@@ -187,46 +191,12 @@
   display: inline-block;
   width: 115px;
   height: 50px;
+  .el_button {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .ly_paddingTop {
   height: 80px;
-}
-
-// TODO: .el_buttonに置き換えて削除 (現在はヘッダーでのみ使用している)
-.el_ctaBtn {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  border: transparent 1px solid;
-  border-radius: 5px;
-  box-sizing: border-box; /* TODO: 必要に応じて共通化 */
-  font-weight: bold;
-  font-size: 14px;
-
-  &.el_ctaBtn__rounded {
-    border-radius: 31px;
-  }
-  
-  &.el_ctaBtn__orange {
-    background-color: #F5A623;
-    color: #FFFFFF;
-    &:focus, &:hover {
-      border: currentColor 1px solid;
-      background-color: #FFFFFF;
-      color: #F5A623;
-    }
-  }
-
-  &.el_ctaBtn__navy {
-    background-color: #1B224C;
-    color: #FFFFFF;
-    &:focus, &:hover {
-      border: currentColor 1px solid;
-      background-color: #FFFFFF;
-      color: #1B224C;
-    }
-  }
 }
