feat: 「3つの強み」のクラス名を変更

--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -113,19 +113,19 @@
 }
 
 /* 3つの強み */
-.ly_strengths_inner {
+.ly_feature_inner {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
   padding: 52px 0 93px;
 }
 
-.bl_strengths_ttl {
+.bl_feature_title {
   text-align: center;
   padding-bottom: 59px;
 }
 
-.bl_media {
+.bl_feature_media {
   display: flex;
   flex-direction: column;
   gap: 20px 0;
@@ -135,14 +135,14 @@
     gap: 0 50px;
   }
   
-  &.bl_media__reverse {
+  &.bl_feature_media__reverse {
     @media screen and (min-width: 1025px) {
       flex-direction: row-reverse;
     }
   }
 }
 
-.bl_media_imgWrapper {
+.bl_feature_media_imgWrapper {
   width: 90%;
   max-width: 350px;
   margin: 0 auto;
@@ -155,7 +155,7 @@
   }
 }
 
-.bl_media_body {
+.bl_feature_media_body {
   @media screen and (max-width: 1024px) {
     width: 90%;
     max-width: 700px;
@@ -163,7 +163,7 @@
   }
 }
 
-.bl_media_label {
+.bl_feature_media_label {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,14 +175,14 @@
   font-size: 12px;
 }
 
-.bl_media_ttl {
+.bl_feature_media_ttl {
   color: #1B224C;
   font-weight: bold;
   font-size: 26px;
   line-height: 39px;
 }
 
-.bl_media_txt {
+.bl_feature_media_txt {
   color: #1B224C;
   font-weight: 500;
   font-size: 16px;
