--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -113,80 +113,83 @@
 }
 
 /* 3つの強み */
-.ly_feature_inner {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 52px 0 93px;
+.ly_feature {
+  .ly_inner {
+    padding-top: 52px;
+    padding-bottom: 93px;
+  }
 }
 
 .bl_feature_title {
+  margin-bottom: 59px;
   text-align: center;
-  padding-bottom: 59px;
 }
 
-.bl_feature_media {
+.bl_feature_items {
   display: flex;
   flex-direction: column;
-  gap: 20px 0;
-  padding: 0 0 60px;
-  @media screen and (min-width: 1025px) {
-    flex-direction: row;
-    gap: 0 50px;
-  }
-  
-  &.bl_feature_media__reverse {
+  gap: 60px 0;
+
+  .bl_feature_media {
+    display: flex;
+    flex-direction: column;
+    gap: 20px 0;
     @media screen and (min-width: 1025px) {
-      flex-direction: row-reverse;
+      flex-direction: row;
+      gap: 0 50px;
+    }
+    &.bl_feature_media__reverse {
+      @media screen and (min-width: 1025px) {
+        flex-direction: row-reverse;
+      }
+    }
+
+    .bl_feature_media_imgWrapper {
+      width: 90%;
+      max-width: 350px;
+      margin: 0 auto;
+      @media screen and (min-width: 1025px) {
+        width: 40%;
+      }
+      img {
+        width: 100%;
+      }
+    }
+
+    .bl_feature_media_body {
+      @media screen and (max-width: 1024px) {
+        width: 90%;
+        max-width: 700px;
+        margin: 0 auto;
+      }
+
+      .bl_feature_media_label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90px;
+        height: 30px;
+        margin-bottom: 28.5px;
+        background-color: #F5A623;
+        color: white;
+        font-size: 12px;
+      }
+
+      .bl_feature_media_title {
+        color: #1B224C;
+        font-weight: bold;
+        font-size: 26px;
+        line-height: 39px;
+      }
+
+      .bl_feature_media_txt {
+        color: #1B224C;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 27px;
+      }
     }
   }
-}
-
-.bl_feature_media_imgWrapper {
-  width: 90%;
-  max-width: 350px;
-  margin: 0 auto;
-  @media screen and (min-width: 1025px) {
-    width: 40%;
-  }
-
-  img {
-    width: 100%;
-  }
-}
-
-.bl_feature_media_body {
-  @media screen and (max-width: 1024px) {
-    width: 90%;
-    max-width: 700px;
-    margin: 0 auto;
-  }
-}
-
-.bl_feature_media_label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 90px;
-  height: 30px;
-  margin-bottom: 28.5px;
-  background-color: #F5A623;
-  color: white;
-  font-size: 12px;
-}
-
-.bl_feature_media_ttl {
-  color: #1B224C;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 39px;
-}
-
-.bl_feature_media_txt {
-  color: #1B224C;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 27px;
 }
 
 /* 料金プラン */
