--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -39,7 +39,7 @@ h1, h2, h3, p {
 }
 
 // TODO: 全要素で対応後に削除予定
-.ly_fv, .ly_about {
+.ly_fv, .ly_about, .ly_feature {
   * {
     box-sizing: border-box;
   }
