refactor: 3つの強みのCSSをリファクタ

--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -163,7 +163,7 @@
         margin: 0 auto;
       }
 
-      .bl_feature_media_label {
+      .bl_feature_media_body_label {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -175,14 +175,14 @@
         font-size: 12px;
       }
 
-      .bl_feature_media_title {
+      .bl_feature_media_body_title {
         color: #1B224C;
         font-weight: bold;
         font-size: 26px;
         line-height: 39px;
       }
 
-      .bl_feature_media_txt {
+      .bl_feature_media_body_text {
         color: #1B224C;
         font-weight: 500;
         font-size: 16px;
