--- a/app/public/wp-content/themes/engress/css/index.css
+++ b/app/public/wp-content/themes/engress/css/index.css
@@ -156,7 +156,7 @@
     margin: 0 auto;
   }
 }
-.bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_label {
+.bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_body_label {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,13 +167,13 @@
   color: white;
   font-size: 12px;
 }
-.bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_title {
+.bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_body_title {
   color: #1B224C;
   font-weight: bold;
   font-size: 26px;
   line-height: 39px;
 }
-.bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_txt {
+.bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_body_text {
   color: #1B224C;
   font-weight: 500;
   font-size: 16px;
