--- a/app/public/wp-content/themes/engress/css/index.css
+++ b/app/public/wp-content/themes/engress/css/index.css
@@ -122,39 +122,28 @@
 }
 .bl_feature_items .bl_feature_media {
   display: flex;
-  flex-direction: column;
-  gap: 20px 0;
+  gap: 0 50px;
 }
-@media screen and (min-width: 1025px) {
+@media screen and (max-width: 1024px) {
   .bl_feature_items .bl_feature_media {
-    flex-direction: row;
-    gap: 0 50px;
+    display: block;
   }
 }
-@media screen and (min-width: 1025px) {
-  .bl_feature_items .bl_feature_media.bl_feature_media__reverse {
-    flex-direction: row-reverse;
-  }
+.bl_feature_items .bl_feature_media.bl_feature_media__reverse {
+  flex-direction: row-reverse;
 }
 .bl_feature_items .bl_feature_media .bl_feature_media_imgWrapper {
-  width: 90%;
-  max-width: 350px;
-  margin: 0 auto;
-}
-@media screen and (min-width: 1025px) {
-  .bl_feature_items .bl_feature_media .bl_feature_media_imgWrapper {
-    width: 40%;
-  }
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: 40%;
 }
 .bl_feature_items .bl_feature_media .bl_feature_media_imgWrapper img {
   width: 100%;
 }
-@media screen and (max-width: 1024px) {
-  .bl_feature_items .bl_feature_media .bl_feature_media_body {
-    width: 90%;
-    max-width: 700px;
-    margin: 0 auto;
-  }
+.bl_feature_items .bl_feature_media .bl_feature_media_body {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0%;
 }
 .bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_body_label {
   display: flex;
@@ -168,10 +157,11 @@
   font-size: 12px;
 }
 .bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_body_title {
+  margin-bottom: 39px;
   color: #1B224C;
   font-weight: bold;
   font-size: 26px;
-  line-height: 39px;
+  line-height: 1.5;
 }
 .bl_feature_items .bl_feature_media .bl_feature_media_body .bl_feature_media_body_text {
   color: #1B224C;
