--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -64,6 +64,9 @@ h1, h2, h3, p, figure {
   max-width: 950px;
   margin: 0 auto;
   padding: 0 25px;
+  @media screen and (max-width: 767px) {
+    max-width: 600px;
+  }
 }
 
 .el_companyLogo {
